Fix cut off text in German 115 appeal.

--- a/media/css/115release.css
+++ b/media/css/115release.css
@@ -162,7 +162,7 @@ body {
 }
 
 header {
-  --max-width: 70ch;
+  --max-width: 80ch;
   padding-inline: 16px;
   padding-block: 50px 400px;
 }
